# rule-shell

./: Cargo.toml  README.md
src/: command_builder.rs  main.rs
